# godbyte-lang

./: .gitignore  CMakeLists.txt  README.md
gbpp/: CMakeLists.txt  increment_version.cmake
gbpp/backend/: codegen_arm64.cpp  codegen_sysv.cpp  codegen_win64.cpp  emitter_asm.cpp  emitter_coff.cpp  emitter_elf.cpp  factory.cpp  regalloc.cpp  x86_encoder.cpp  x86_encoder.hpp
gbpp/divo/: config.hpp  main.cpp  utils.hpp
gbpp/frontend/: irgen.cpp  lexer.cpp  parser.cpp  sema.cpp
gbpp/include/: ast.hpp  binaryBuffer.hpp  codegen.hpp  common.hpp  emitter.hpp  ir.hpp  irgen.hpp  lexer.hpp  mir.hpp  parser.hpp  regalloc.hpp  sema.hpp  token.hpp  type.hpp  version.hpp
gbpp/lsp/: main.cpp  server.cpp  server.hpp
gbpp/lsp-client/: client.js  language-configuration.json  package.json  pnpm-lock.yaml
gbpp/lsp-client/icons/: godbytepp-icon-theme.json
gbpp/lsp-client/syntaxes/: gbpp.tmLanguage.json
gbpp/utils/: toml.hpp
